--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
     position: relative;
 }
 
-.shelf > div {
+.shelf > book {
     border: solid black 1px;
     
 }
@@ -30,12 +30,44 @@ body {
 #overlay {
     z-index: 1;
     position: absolute;
-    top: 20vh;
-    left: 30vw;
-    background-color: rgba(99, 101, 102, 0.212);
+    top:0;
+    left:0;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(99, 101, 102, 0.6);
+    align-content: center;
 
 }
 
-.bookForm {
-  display: flex;
+#bookForm {
+  display: grid;
+  grid-template-columns:1fr 1fr;
+  grid-template-rows: repeat(5, 1fr);
+  height: 50%;
+  width: 70%;
+  justify-self: center;
+  gap: 20px;
+  border: black 3px groove;
+  background-color: bisque;
+}
+
+#bookForm > :nth-child(odd){
+    padding-left: 10px;
+    font-size: 1.6em;
+    font-family: Caveat;
+}
+
+#bookForm > :nth-child(3) {
+    grid-row: 1;
+    grid-column: 2;
+
+}
+
+#intakePages {
+    grid-row: 4;
+    grid-column: 1;
+}
+
+#intakeSubmit {
+    grid-column: 1/3;
 }
